// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should render a previous button and next button based on the current page and total pages 1`] = `
<div
  className="paginator"
>
  <Link
    className="btn"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Connect(Translate)>
      Previous
    </Connect(Translate)>
  </Link>
  <span>
     5 / 25 
  </span>
  <Link
    className="btn"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Connect(Translate)>
      Next
    </Connect(Translate)>
  </Link>
</div>
`;

exports[`Paginator when base Url already has the query string "?" should add the page number properly to the query string 1`] = `
<div
  className="paginator"
>
  <Link
    className="btn"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Connect(Translate)>
      Previous
    </Connect(Translate)>
  </Link>
  <span>
     3 / 25 
  </span>
  <Link
    className="btn"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Connect(Translate)>
      Next
    </Connect(Translate)>
  </Link>
</div>
`;

exports[`Paginator when on first page should disable the prev link 1`] = `
<div
  className="paginator"
>
  <Link
    className="btn disabled"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    rel="nofollow"
    style={Object {}}
  >
    <Connect(Translate)>
      Previous
    </Connect(Translate)>
  </Link>
  <span>
     1 / 25 
  </span>
  <Link
    className="btn"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Connect(Translate)>
      Next
    </Connect(Translate)>
  </Link>
</div>
`;

exports[`Paginator when on last page should disable the next link 1`] = `
<div
  className="paginator"
>
  <Link
    className="btn"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Connect(Translate)>
      Previous
    </Connect(Translate)>
  </Link>
  <span>
     25 / 25 
  </span>
  <Link
    className="btn disabled"
    onClick={[Function]}
    onlyActiveOnIndex={false}
    rel="nofollow"
    style={Object {}}
  >
    <Connect(Translate)>
      Next
    </Connect(Translate)>
  </Link>
</div>
`;
